--- a/index1.html
+++ b/index1.html
@@ -1,60 +1,97 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Analog Clock</title>
+	<title>RELOJ</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
 <body>
-	<!--agregación de tema centrado-->
+	<!--agregacion de boostrap para la version 1.3-->
 	<br>
 	<h1>RELOJ ULEAM V1.2</h1>
-	<div class="clock">
-		<div class="num num1">
-			<div>1</div>
+	<div class="container">
+		<div class="row">
+		<div class="col-sm-6">
+				<br>
+				<br>
+			<div class="clock">
+				<div class="num num1">
+					<div>1</div>
+				</div>
+				<div class="num num2">
+					<div>2</div>
+				</div>
+				<div class="num num3">
+					<div>3</div>
+				</div>
+				<div class="num num4">
+					<div>4</div>
+				</div>
+				<div class="num num5">
+					<div>5</div>
+				</div>
+				<div class="num num6">
+					<div>6</div>
+				</div>
+				<div class="num num7">
+					<div>7</div>
+				</div>
+				<div class="num num8">
+					<div>8</div>
+				</div>
+				<div class="num num9">
+					<div>9</div>
+				</div>
+				<div class="num num10">
+					<div>10</div>
+				</div>
+				<div class="num num11">
+					<div>11</div>
+				</div>
+				<div class="num num12">
+					<div>12</div>
+				</div>
+		
+				<div class="hand" id="sec">
+					<div class="sec"></div>
+				</div>
+				<div class="hand" id="min">
+					<div class="min"></div>
+				</div>
+				<div class="hand" id="hour">
+					<div class="hour"></div>
+				</div>
+			</div>
 		</div>
-		<div class="num num2">
-			<div>2</div>
+		<div class="col-sm-6">
+			<!--agregación de relog digital v1.3-->
+			<center>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+			<div>
+				<div class="reloj">
+					<p class="dia" id="dia">---</p>
+					<p class="mes" id="mes">---</p>
+					<div class="hora" id="hora">
+						<p>00</p>
+						<p>00</p>
+						<p>00</p>
+					</div>
+				</div>
+			</div>
+		</center>
 		</div>
-		<div class="num num3">
-			<div>3</div>
-		</div>
-		<div class="num num4">
-			<div>4</div>
-		</div>
-		<div class="num num5">
-			<div>5</div>
-		</div>
-		<div class="num num6">
-			<div>6</div>
-		</div>
-		<div class="num num7">
-			<div>7</div>
-		</div>
-		<div class="num num8">
-			<div>8</div>
-		</div>
-		<div class="num num9">
-			<div>9</div>
-		</div>
-		<div class="num num10">
-			<div>10</div>
-		</div>
-		<div class="num num11">
-			<div>11</div>
-		</div>
-		<div class="num num12">
-			<div>12</div>
-		</div>
-
-		<div class="hand" id="sec">
-			<div class="sec"></div>
-		</div>
-		<div class="hand" id="min">
-			<div class="min"></div>
-		</div>
-		<div class="hand" id="hour">
-			<div class="hour"></div>
 		</div>
 	</div>
 	<script type="text/javascript" src="app.js"></script>
